Fix missing parent dir link when browsing file:// URLs.

This regressed in r466103 when the FTP directory listing code changed.
Some of that code is also used for file:// directory listings in
URLRequestFileDirJob, but URLRequestFileDirJob did not get updated to
match the changes in r466103.

Make up for that now, and add more rigorous unit tests for
URLRequestFileDirJob.

BUG=755236

Change-Id: I7809dcd5ab03937c0e00933dc69add9f22915c49
Reviewed-on: https://chromium-review.googlesource.com/616351
Reviewed-by: Camille Lamy <clamy@chromium.org>
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Lei Zhang <thestig@chromium.org>
Cr-Commit-Position: refs/heads/master@{#495189}
Former-commit-id: 0f07813faaf16639f6ad4aaded973b11787015b8